Published multiple files

--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй)","permalink":"/geofilosofiya/1-lekczii/lekcziya-04-politiki-zaboty-morton-i-harauej/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-04-politiki-zaboty-morton-i-harauej/"}
 ---
 
 
