--- a/src/site/notes/Кейс база знаний/2 Темы/Антикоперниканский поворот.md.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Антикоперниканский поворот.md.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Антикоперниканский поворот.md","permalink":"/geofilosofiya/2-temy/antikopernikanskij-povorot/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Антикоперниканский поворот.md","permalink":"/kejs-baza-znanij/2-temy/antikopernikanskij-povorot/"}
 ---
 
 
