--- a/src/site/notes/Кейс база знаний/2 Темы/Геофеноменология.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Геофеноменология.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Геофеноменология","permalink":"/geofilosofiya/2-temy/geofenomenologiya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Геофеноменология","permalink":"/kejs-baza-znanij/2-temy/geofenomenologiya/"}
 ---
 
 
