--- a/src/site/notes/Кейс база знаний/2 Темы/История картографии.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/История картографии.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/История картографии","permalink":"/geofilosofiya/2-temy/istoriya-kartografii/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/История картографии","permalink":"/kejs-baza-znanij/2-temy/istoriya-kartografii/"}
 ---
 
 # История картографии
