--- a/src/site/notes/Кейс база знаний/2 Темы/Критика антропоцентризма.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Критика антропоцентризма.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Критика антропоцентризма","permalink":"/geofilosofiya/2-temy/kritika-antropoczentrizma/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Критика антропоцентризма","permalink":"/kejs-baza-znanij/2-temy/kritika-antropoczentrizma/"}
 ---
 
 # Критика антропоцентризма
