--- a/src/site/notes/Кейс база знаний/2 Темы/Критические исследования картографии.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Критические исследования картографии.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Критические исследования картографии","permalink":"/geofilosofiya/2-temy/kriticheskie-issledovaniya-kartografii/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Критические исследования картографии","permalink":"/kejs-baza-znanij/2-temy/kriticheskie-issledovaniya-kartografii/"}
 ---
 
 # Критические исследования картографии
