--- a/src/site/notes/Кейс база знаний/2 Темы/Практическая геофилософия.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Практическая геофилософия.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Практическая геофилософия","permalink":"/geofilosofiya/2-temy/prakticheskaya-geofilosofiya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Практическая геофилософия","permalink":"/kejs-baza-znanij/2-temy/prakticheskaya-geofilosofiya/"}
 ---
 
 
