--- a/src/site/notes/Кейс база знаний/2 Темы/Проблема оснований и безосновности.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Проблема оснований и безосновности.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Проблема оснований и безосновности","permalink":"/geofilosofiya/2-temy/problema-osnovanij-i-bezosnovnosti/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Проблема оснований и безосновности","permalink":"/kejs-baza-znanij/2-temy/problema-osnovanij-i-bezosnovnosti/"}
 ---
 
 
