--- a/src/site/notes/Кейс база знаний/2 Темы/Спекулятивный поворот.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Спекулятивный поворот.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Спекулятивный поворот","permalink":"/geofilosofiya/2-temy/spekulyativnyj-povorot/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Спекулятивный поворот","permalink":"/kejs-baza-znanij/2-temy/spekulyativnyj-povorot/"}
 ---
 
 # Спекулятивный поворот
