--- a/src/site/notes/Кейс база знаний/2 Темы/Темные теории (Темная геофилософия).md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Темные теории (Темная геофилософия).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Темные теории (Темная геофилософия)","permalink":"/geofilosofiya/2-temy/temnye-teorii-temnaya-geofilosofiya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Темные теории (Темная геофилософия)","permalink":"/kejs-baza-znanij/2-temy/temnye-teorii-temnaya-geofilosofiya/"}
 ---
 
 # Темные теории (Темная геофилософия)
