--- a/src/site/notes/Кейс база знаний/2 Темы/Философия нефти и петромодерн.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Философия нефти и петромодерн.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Философия нефти и петромодерн","permalink":"/geofilosofiya/2-temy/filosofiya-nefti-i-petromodern/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Философия нефти и петромодерн","permalink":"/kejs-baza-znanij/2-temy/filosofiya-nefti-i-petromodern/"}
 ---
 
 
