--- a/src/site/notes/Кейс база знаний/3 Понятия/Детерриторизация и Ретерриторизация.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Детерриторизация и Ретерриторизация.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация","permalink":"/geofilosofiya/3-ponyatiya/deterritorizacziya-i-reterritorizacziya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Детерриторизация и Ретерриторизация","permalink":"/kejs-baza-znanij/3-ponyatiya/deterritorizacziya-i-reterritorizacziya/"}
 ---
 
 
