--- a/src/site/notes/Кейс база знаний/3 Понятия/Танатосфера.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Танатосфера.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Танатосфера","permalink":"/geofilosofiya/3-ponyatiya/tanatosfera/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Танатосфера","permalink":"/kejs-baza-znanij/3-ponyatiya/tanatosfera/"}
 ---
 
 # Танатосфера
