--- a/src/site/notes/Кейс база знаний/3 Понятия/Территория.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Территория.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Территория","permalink":"/geofilosofiya/3-ponyatiya/territoriya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Территория","permalink":"/kejs-baza-znanij/3-ponyatiya/territoriya/"}
 ---
 
 # Территория
