--- a/src/site/notes/Кейс база знаний/4 Авторы/Агамбен, Джорджо.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Агамбен, Джорджо.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Агамбен, Джорджо","permalink":"/geofilosofiya/4-avtory/agamben-dzhordzho/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Агамбен, Джорджо","permalink":"/kejs-baza-znanij/4-avtory/agamben-dzhordzho/"}
 ---
 
 # Агамбен, Джорджо
