--- a/src/site/notes/Кейс база знаний/4 Авторы/Барад, Карен.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Барад, Карен.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Барад, Карен","permalink":"/geofilosofiya/4-avtory/barad-karen/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Барад, Карен","permalink":"/kejs-baza-znanij/4-avtory/barad-karen/"}
 ---
 
 # Барад, Карен
