--- a/src/site/notes/Кейс база знаний/4 Авторы/Беннет, Джейн.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Беннет, Джейн.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Беннет, Джейн","permalink":"/geofilosofiya/4-avtory/bennet-dzhejn/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Беннет, Джейн","permalink":"/kejs-baza-znanij/4-avtory/bennet-dzhejn/"}
 ---
 
 # Беннет, Джейн
