--- a/src/site/notes/Кейс база знаний/4 Авторы/Берг, Томас.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Берг, Томас.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Берг, Томас","permalink":"/geofilosofiya/4-avtory/berg-tomas/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Берг, Томас","permalink":"/kejs-baza-znanij/4-avtory/berg-tomas/"}
 ---
 
 # Берг, Томас
