--- a/src/site/notes/Кейс база знаний/4 Авторы/Бибихин, Владимир.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Бибихин, Владимир.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Бибихин, Владимир","permalink":"/geofilosofiya/4-avtory/bibihin-vladimir/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Бибихин, Владимир","permalink":"/kejs-baza-znanij/4-avtory/bibihin-vladimir/"}
 ---
 
 # Бибихин, Владимир
