--- a/src/site/notes/Кейс база знаний/4 Авторы/Брайдотти, Рози.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Брайдотти, Рози.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Брайдотти, Рози","permalink":"/geofilosofiya/4-avtory/brajdotti-rozi/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Брайдотти, Рози","permalink":"/kejs-baza-znanij/4-avtory/brajdotti-rozi/"}
 ---
 
 # Брайдотти, Рози
