--- a/src/site/notes/Кейс база знаний/4 Авторы/Бродель, Фернан.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Бродель, Фернан.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Бродель, Фернан","permalink":"/geofilosofiya/4-avtory/brodel-fernan/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Бродель, Фернан","permalink":"/kejs-baza-znanij/4-avtory/brodel-fernan/"}
 ---
 
 # Бродель, Фернан
