--- a/src/site/notes/Кейс база знаний/4 Авторы/Вудард, Бен.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Вудард, Бен.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Вудард, Бен","permalink":"/geofilosofiya/4-avtory/vudard-ben/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Вудард, Бен","permalink":"/kejs-baza-znanij/4-avtory/vudard-ben/"}
 ---
 
 # Вудард, Бен
