--- a/src/site/notes/Кейс база знаний/4 Авторы/Гваттари, Феликс.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Гваттари, Феликс.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Гваттари, Феликс","permalink":"/geofilosofiya/4-avtory/gvattari-feliks/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Гваттари, Феликс","permalink":"/kejs-baza-znanij/4-avtory/gvattari-feliks/"}
 ---
 
 # Гваттари, Феликс
