--- a/src/site/notes/Кейс база знаний/4 Авторы/Гуссерль, Эдмунд.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Гуссерль, Эдмунд.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Гуссерль, Эдмунд","permalink":"/geofilosofiya/4-avtory/gusserl-edmund/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Гуссерль, Эдмунд","permalink":"/kejs-baza-znanij/4-avtory/gusserl-edmund/"}
 ---
 
 # Гуссерль, Эдмунд
