--- a/src/site/notes/Кейс база знаний/4 Авторы/Деррида, Жак.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Деррида, Жак.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Деррида, Жак","permalink":"/geofilosofiya/4-avtory/derrida-zhak/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Деррида, Жак","permalink":"/kejs-baza-znanij/4-avtory/derrida-zhak/"}
 ---
 
 # Деррида, Жак
