--- a/src/site/notes/Кейс база знаний/4 Авторы/Кант, Иммануил.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Кант, Иммануил.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Кант, Иммануил","permalink":"/geofilosofiya/4-avtory/kant-immanuil/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Кант, Иммануил","permalink":"/kejs-baza-znanij/4-avtory/kant-immanuil/"}
 ---
 
 # Кант, Иммануил
