--- a/src/site/notes/Кейс база знаний/4 Авторы/Лавлок, Джеймс.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Лавлок, Джеймс.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Лавлок, Джеймс","permalink":"/geofilosofiya/4-avtory/lavlok-dzhejms/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Лавлок, Джеймс","permalink":"/kejs-baza-znanij/4-avtory/lavlok-dzhejms/"}
 ---
 
 # Лавлок, Джеймс
