--- a/src/site/notes/Кейс база знаний/4 Авторы/Латур, Бруно.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Латур, Бруно.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Латур, Бруно","permalink":"/geofilosofiya/4-avtory/latur-bruno/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Латур, Бруно","permalink":"/kejs-baza-znanij/4-avtory/latur-bruno/"}
 ---
 
 
