--- a/src/site/notes/Кейс база знаний/4 Авторы/Мерло-Понти, Морис.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Мерло-Понти, Морис.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Мерло-Понти, Морис","permalink":"/geofilosofiya/4-avtory/merlo-ponti-moris/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Мерло-Понти, Морис","permalink":"/kejs-baza-znanij/4-avtory/merlo-ponti-moris/"}
 ---
 
 # Мерло-Понти, Морис
