--- a/src/site/notes/Кейс база знаний/4 Авторы/Ницше, Фридрих.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Ницше, Фридрих.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Ницше, Фридрих","permalink":"/geofilosofiya/4-avtory/niczshe-fridrih/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Ницше, Фридрих","permalink":"/kejs-baza-znanij/4-avtory/niczshe-fridrih/"}
 ---
 
 # Ницше, Фридрих
