--- a/src/site/notes/Кейс база знаний/4 Авторы/Платон.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Платон.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Платон","permalink":"/geofilosofiya/4-avtory/platon/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Платон","permalink":"/kejs-baza-znanij/4-avtory/platon/"}
 ---
 
 # Платон
