--- a/src/site/notes/Кейс база знаний/4 Авторы/Подорога, Валерий.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Подорога, Валерий.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Подорога, Валерий","permalink":"/geofilosofiya/4-avtory/podoroga-valerij/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Подорога, Валерий","permalink":"/kejs-baza-znanij/4-avtory/podoroga-valerij/"}
 ---
 
 # Подорога, Валерий
