--- a/src/site/notes/Кейс база знаний/4 Авторы/Такер, Юджин.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Такер, Юджин.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Такер, Юджин","permalink":"/geofilosofiya/4-avtory/taker-yudzhin/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Такер, Юджин","permalink":"/kejs-baza-znanij/4-avtory/taker-yudzhin/"}
 ---
 
 # Такер, Юджин
