--- a/src/site/notes/Кейс база знаний/4 Авторы/Хайдеггер, Мартин.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Хайдеггер, Мартин.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Хайдеггер, Мартин","permalink":"/geofilosofiya/4-avtory/hajdegger-martin/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Хайдеггер, Мартин","permalink":"/kejs-baza-znanij/4-avtory/hajdegger-martin/"}
 ---
 
 # Хайдеггер, Мартин
