--- a/src/site/notes/Кейс база знаний/4 Авторы/Харауэй, Донна.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Харауэй, Донна.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Харауэй, Донна","permalink":"/geofilosofiya/4-avtory/harauej-donna/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Харауэй, Донна","permalink":"/kejs-baza-znanij/4-avtory/harauej-donna/"}
 ---
 
 # Харауэй, Донна
