--- a/src/site/notes/Кейс база знаний/4 Авторы/Хуэй, Юк.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Хуэй, Юк.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Хуэй, Юк","permalink":"/geofilosofiya/4-avtory/huej-yuk/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Хуэй, Юк","permalink":"/kejs-baza-znanij/4-avtory/huej-yuk/"}
 ---
 
 # Хуэй, Юк
