--- a/src/site/notes/Кейс база знаний/4 Авторы/Шварц, Елена.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Шварц, Елена.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Шварц, Елена","permalink":"/geofilosofiya/4-avtory/shvarcz-elena/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Шварц, Елена","permalink":"/kejs-baza-znanij/4-avtory/shvarcz-elena/"}
 ---
 
 # Шварц, Елена
