--- a/src/site/notes/Кейс база знаний/4 Авторы/Шеллинг, Фридрих.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Шеллинг, Фридрих.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Шеллинг, Фридрих","permalink":"/geofilosofiya/4-avtory/shelling-fridrih/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Шеллинг, Фридрих","permalink":"/kejs-baza-znanij/4-avtory/shelling-fridrih/"}
 ---
 
 # Шеллинг, Фридрих
