--- a/src/site/notes/Кейс база знаний/4 Авторы/Ясперс, Карл.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Ясперс, Карл.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Ясперс, Карл","permalink":"/geofilosofiya/4-avtory/yaspers-karl/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Ясперс, Карл","permalink":"/kejs-baza-znanij/4-avtory/yaspers-karl/"}
 ---
 
 # Ясперс, Карл
