--- a/src/site/notes/Кейс база знаний/5 Источники/Книга - Атлас Петрамодерна.md
+++ b/src/site/notes/Кейс база знаний/5 Источники/Книга - Атлас Петрамодерна.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/5 Источники/Книга - Атлас Петрамодерна","permalink":"/geofilosofiya/5-istochniki/kniga-atlas-petramoderna/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/5 Источники/Книга - Атлас Петрамодерна","permalink":"/kejs-baza-znanij/5-istochniki/kniga-atlas-petramoderna/"}
 ---
 
 # Книга: Нефть. Атлас Петрамодерна
