--- a/src/site/notes/Кейс база знаний/1 Лекции/000 Лекции MOC.md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/000 Лекции MOC.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/1 Лекции/000 Лекции MOC","permalink":"/geofilosofiya/1-lekczii/000-lekczii-moc/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/000 Лекции MOC","permalink":"/kejs-baza-znanij/1-lekczii/000-lekczii-moc/"}
 ---
 
 
