--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 01 – Когда закончилась Земля.md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 01 – Когда закончилась Земля.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/1 Лекции/Лекция 01 – Когда закончилась Земля","permalink":"/geofilosofiya/1-lekczii/lekcziya-01-kogda-zakonchilas-zemlya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 01 – Когда закончилась Земля","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-01-kogda-zakonchilas-zemlya/"}
 ---
 
 
