--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 02 - Земля как концепт (Делёз и Гваттари).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 02 - Земля как концепт (Делёз и Гваттари).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/1 Лекции/Лекция 02 - Земля как концепт (Делёз и Гваттари)","permalink":"/geofilosofiya/1-lekczii/lekcziya-02-zemlya-kak-konczept-delyoz-i-gvattari/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 02 - Земля как концепт (Делёз и Гваттари)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-02-zemlya-kak-konczept-delyoz-i-gvattari/"}
 ---
 
 
