--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард)","permalink":"/geofilosofiya/1-lekczii/lekcziya-03-zemlya-bez-osnovanij-shelling-i-vudard/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-03-zemlya-bez-osnovanij-shelling-i-vudard/"}
 ---
 
 
