--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога)","permalink":"/geofilosofiya/1-lekczii/lekcziya-05-metafizika-landshafta-podoroga/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-05-metafizika-landshafta-podoroga/"}
 ---
 
 
