--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md.md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md","permalink":"/geofilosofiya/1-lekczii/lekcziya-06-fenomenologiya-zemli-gusserl-merlo-ponti-derrida/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-06-fenomenologiya-zemli-gusserl-merlo-ponti-derrida/"}
 ---
 
 
