--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 08 - Политическая Земля (Шмитт и Латур).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 08 - Политическая Земля (Шмитт и Латур).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/1 Лекции/Лекция 08 - Политическая Земля (Шмитт и Латур)","permalink":"/geofilosofiya/1-lekczii/lekcziya-08-politicheskaya-zemlya-shmitt-i-latur/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 08 - Политическая Земля (Шмитт и Латур)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-08-politicheskaya-zemlya-shmitt-i-latur/"}
 ---
 
 
