--- a/src/site/notes/Кейс база знаний/2 Темы/Метафизика ландшафта.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Метафизика ландшафта.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Метафизика ландшафта","permalink":"/geofilosofiya/2-temy/metafizika-landshafta/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Метафизика ландшафта","permalink":"/kejs-baza-znanij/2-temy/metafizika-landshafta/"}
 ---
 
 
