--- a/src/site/notes/Кейс база знаний/2 Темы/Множественность (миров, природ, земель).md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Множественность (миров, природ, земель).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Множественность (миров, природ, земель)","permalink":"/geofilosofiya/2-temy/mnozhestvennost-mirov-prirod-zemel/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Множественность (миров, природ, земель)","permalink":"/kejs-baza-znanij/2-temy/mnozhestvennost-mirov-prirod-zemel/"}
 ---
 
 
