--- a/src/site/notes/Кейс база знаний/2 Темы/Политики заботы.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Политики заботы.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Политики заботы","permalink":"/geofilosofiya/2-temy/politiki-zaboty/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Политики заботы","permalink":"/kejs-baza-znanij/2-temy/politiki-zaboty/"}
 ---
 
 
