--- a/src/site/notes/Кейс база знаний/2 Темы/Политическая земля.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Политическая земля.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Политическая земля","permalink":"/geofilosofiya/2-temy/politicheskaya-zemlya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Политическая земля","permalink":"/kejs-baza-znanij/2-temy/politicheskaya-zemlya/"}
 ---
 
 # Политическая земля
