--- a/src/site/notes/Кейс база знаний/2 Темы/Постгуманизм.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Постгуманизм.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Постгуманизм","permalink":"/geofilosofiya/2-temy/postgumanizm/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Постгуманизм","permalink":"/kejs-baza-znanij/2-temy/postgumanizm/"}
 ---
 
 # Постгуманизм
