--- a/src/site/notes/Кейс база знаний/2 Темы/Смерть больших нарративов.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Смерть больших нарративов.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/2 Темы/Смерть больших нарративов","permalink":"/geofilosofiya/2-temy/smert-bolshih-narrativov/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/2 Темы/Смерть больших нарративов","permalink":"/kejs-baza-znanij/2-temy/smert-bolshih-narrativov/"}
 ---
 
 # Смерть больших нарративов
