--- a/src/site/notes/Кейс база знаний/3 Понятия/Автохтония.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Автохтония.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Автохтония","permalink":"/geofilosofiya/3-ponyatiya/avtohtoniya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Автохтония","permalink":"/kejs-baza-znanij/3-ponyatiya/avtohtoniya/"}
 ---
 
 # Автохтония
