--- a/src/site/notes/Кейс база знаний/3 Понятия/Антропоцен.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Антропоцен.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Антропоцен","permalink":"/geofilosofiya/3-ponyatiya/antropoczen/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Антропоцен","permalink":"/kejs-baza-znanij/3-ponyatiya/antropoczen/"}
 ---
 
 
