--- a/src/site/notes/Кейс база знаний/3 Понятия/Атлас (как жанр).md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Атлас (как жанр).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Атлас (как жанр)","permalink":"/geofilosofiya/3-ponyatiya/atlas-kak-zhanr/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Атлас (как жанр)","permalink":"/kejs-baza-znanij/3-ponyatiya/atlas-kak-zhanr/"}
 ---
 
 # Атлас (как жанр)
