--- a/src/site/notes/Кейс база знаний/3 Понятия/Геоистория.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Геоистория.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Геоистория","permalink":"/geofilosofiya/3-ponyatiya/geoistoriya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Геоистория","permalink":"/kejs-baza-znanij/3-ponyatiya/geoistoriya/"}
 ---
 
 
