--- a/src/site/notes/Кейс база знаний/3 Понятия/Гиперобъекты.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Гиперобъекты.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Гиперобъекты","permalink":"/geofilosofiya/3-ponyatiya/giperobekty/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Гиперобъекты","permalink":"/kejs-baza-znanij/3-ponyatiya/giperobekty/"}
 ---
 
 
