--- a/src/site/notes/Кейс база знаний/3 Понятия/Номос земли.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Номос земли.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Номос земли","permalink":"/geofilosofiya/3-ponyatiya/nomos-zemli/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Номос земли","permalink":"/kejs-baza-znanij/3-ponyatiya/nomos-zemli/"}
 ---
 
 # Номос земли
