--- a/src/site/notes/Кейс база знаний/3 Понятия/Основание.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Основание.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Основание","permalink":"/geofilosofiya/3-ponyatiya/osnovanie/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Основание","permalink":"/kejs-baza-znanij/3-ponyatiya/osnovanie/"}
 ---
 
 # Основание (Grund)
