--- a/src/site/notes/Кейс база знаний/3 Понятия/Петромодерн.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Петромодерн.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Петромодерн","permalink":"/geofilosofiya/3-ponyatiya/petromodern/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Петромодерн","permalink":"/kejs-baza-znanij/3-ponyatiya/petromodern/"}
 ---
 
 # Петромодерн
