--- a/src/site/notes/Кейс база знаний/3 Понятия/Плоть мира.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Плоть мира.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Плоть мира","permalink":"/geofilosofiya/3-ponyatiya/plot-mira/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Плоть мира","permalink":"/kejs-baza-znanij/3-ponyatiya/plot-mira/"}
 ---
 
 # Плоть мира
