--- a/src/site/notes/Кейс база знаний/3 Понятия/Ритурнель (Рефрен).md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Ритурнель (Рефрен).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Ритурнель (Рефрен)","permalink":"/geofilosofiya/3-ponyatiya/riturnel-refren/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Ритурнель (Рефрен)","permalink":"/kejs-baza-znanij/3-ponyatiya/riturnel-refren/"}
 ---
 
 # Ритурнель (Рефрен)
