--- a/src/site/notes/Кейс база знаний/3 Понятия/Симпоэзис.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Симпоэзис.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Симпоэзис","permalink":"/geofilosofiya/3-ponyatiya/simpoezis/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Симпоэзис","permalink":"/kejs-baza-znanij/3-ponyatiya/simpoezis/"}
 ---
 
 # Симпоэзис
