--- a/src/site/notes/Кейс база знаний/3 Понятия/Трансцендентальная геология.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Трансцендентальная геология.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Трансцендентальная геология","permalink":"/geofilosofiya/3-ponyatiya/transczendentalnaya-geologiya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Трансцендентальная геология","permalink":"/kejs-baza-znanij/3-ponyatiya/transczendentalnaya-geologiya/"}
 ---
 
 # Трансцендентальная геология
