--- a/src/site/notes/Кейс база знаний/3 Понятия/Хтонь.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Хтонь.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/3 Понятия/Хтонь","permalink":"/geofilosofiya/3-ponyatiya/hton/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/Хтонь","permalink":"/kejs-baza-znanij/3-ponyatiya/hton/"}
 ---
 
 
