--- a/src/site/notes/Кейс база знаний/4 Авторы/Аристотель.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Аристотель.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Аристотель","permalink":"/geofilosofiya/4-avtory/aristotel/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Аристотель","permalink":"/kejs-baza-znanij/4-avtory/aristotel/"}
 ---
 
 # Аристотель
