--- a/src/site/notes/Кейс база знаний/4 Авторы/Мортон, Тимоти.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Мортон, Тимоти.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Геофилософия/4 Авторы/Мортон, Тимоти","permalink":"/geofilosofiya/4-avtory/morton-timoti/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/Мортон, Тимоти","permalink":"/kejs-baza-znanij/4-avtory/morton-timoti/"}
 ---
 
 # Мортон, Тимоти
