Published multiple files

--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй).md
@@ -2,4 +2,30 @@
 {"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-04-politiki-zaboty-morton-i-harauej/"}
 ---
 
+# Лекция 4: Политики заботы. Поврежденная земля, Мортон и Харауэй
 
+**Основные понятия:** [[Поврежденная земля\|Поврежденная земля]], [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцен]], [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцен]], [[Кейс база знаний/3 Понятия/Гиперобъекты\|Гиперобъекты]], [[Темная экология\|Темная экология]], [[Кейс база знаний/2 Темы/Политики заботы\|Политики заботы]], [[Кейс база знаний/3 Понятия/Симпоэзис\|Симпоэзис]]
+**Ключевые авторы:** [[Тимоти Мортон\|Тимоти Мортон]], [[Донна Харауэй\|Донна Харауэй]], [[Рози Брайдотти\|Рози Брайдотти]]
+
+## Тезисы
+
+### 1. Что такое [[Поврежденная земля\|Поврежденная земля]]?
+- Это состояние планеты, вызванное тремя факторами:
+    1.  **[[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцен]]**: Геологическая эпоха, когда деятельность человека стала главным фактором изменения Земли.
+    2.  **Отдаление Земли**: Философская позиция "парения над миром" ("[[Глаз Бога\|Глаз Бога]]"), которая создает разрыв между наблюдателем и планетой.
+    3.  **Опасный постгуманизм** ([[Рози Брайдотти\|Рози Брайдотти]]): Технологии, которые обходятся без человека и несут опасность.
+
+### 2. [[Тимоти Мортон\|Тимоти Мортон]]: [[Кейс база знаний/3 Понятия/Гиперобъекты\|Гиперобъекты]] и [[Темная экология\|Темная экология]]
+- **[[Кейс база знаний/3 Понятия/Гиперобъекты\|Гиперобъекты]]**: Это сущности, настолько растянутые во времени и пространстве, что мы не можем воспринять их целиком. Примеры: глобальное потепление, пластик, капитализм.
+- **Характеристики гиперобъектов**: Вязкость, другая темпоральность, нелокальность.
+- **[[Темная экология\|Темная экология]]**: Это "экология без Природы". [[Тимоти Мортон\|Мортон]] утверждает, что сама концепция "Природы" (как чего-то чистого, отдельного от Культуры) — это конструкт.
+- **Философия после конца мира**: Мир как универсальное понятие закончился. Мы живем в окружении гиперобъектов.
+
+### 3. [[Донна Харауэй\|Донна Харауэй]]: от [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцена]] к [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцену]]
+- **Критика [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцена]]**: [[Донна Харауэй\|Харауэй]] считает, что этот термин все еще ставит в центр Человека.
+- **[[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцен]]**: Новая эпоха, названная в честь хтонических (земных) существ. Это время, когда мы учимся **"оставаться со смутой" (staying with the trouble)**.
+- **Ключевые практики Хтулхуцена**:
+    - **[[Кейс база знаний/3 Понятия/Симпоэзис\|Симпоэзис]]**: "Со-творение", совместное становление с другими видами.
+    - **[[Кейс база знаний/3 Понятия/Компост\|Компост]], а не постчеловек**: Мы все — часть одной компостной кучи.
+    - **[[Кейс база знаний/2 Темы/Политики заботы\|Политики заботы]]**: Создание инклюзивных сообществ.
+    - **Быть приземленными**: Признание своей укорененности в Земле.
