--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога).md
@@ -2,4 +2,31 @@
 {"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-05-metafizika-landshafta-podoroga/"}
 ---
 
+# Лекция 5: Метафизика ландшафта (Валерий Подорога)
 
+**Основные понятия:** [[Кейс база знаний/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]], [[Земля произведений\|Земля произведений]], [[Ландшафт\|Ландшафт]]
+**Ключевые авторы:** [[Валерий Подорога\|Валерий Подорога]], [[Сёрен Кьеркегор\|Сёрен Кьеркегор]], [[Фридрих Ницше\|Фридрих Ницше]], [[Мартин Хайдеггер\|Мартин Хайдеггер]]
+
+## Тезисы
+
+### 1. Что такое [[Кейс база знаний/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]]?
+- Это **"топология философского мышления"**. Проект [[Валерий Подорога\|Валерия Подороги]] исследует, как пространство, ландшафт и телесная ориентация мыслителя влияют на его философию.
+- **Всякая мысль пространственна**.
+
+### 2. Из чего состоит [[Ландшафт\|Ландшафт]]?
+- Это сложный синтез, который Подорога называет **"[[Земля произведений\|Земля произведений]]"**. Он включает:
+    - **Автор**: Его биография, тело, болезни.
+    - **Атрибуты**: Внешние объекты, определяющие философа (например, вулкан для Эмпедокла).
+    - **География**: Конкретные места (горы, леса, города).
+    - **Концепты**: Идеи, которые рождаются в этом ландшафте.
+    - **Текст**: Произведение, которое собирает все эти элементы.
+
+### 3. Ландшафтный анализ философов
+- **[[Сёрен Кьеркегор\|Сёрен Кьеркегор]] и Земля-море**:
+    - Ландшафт Кьеркегора — это **гора Мориа**, к которой он совершал экзистенциальное путешествие через **"задержанное дыхание Авраама"**.
+- **[[Фридрих Ницше\|Фридрих Ницше]] и Энгадин**:
+    - Идея **вечного возвращения** приходит к Ницше у конкретного **камня в Зильс-Марии**, конденсируясь из телесного опыта в ландшафте.
+    - **Критика "твердой земли"**: Болезнь заставляет Ницше ощущать тяжесть гравитации.
+- **[[Мартин Хайдеггер\|Мартин Хайдеггер]] и Шварцвальд**:
+    - Его философия [[Четверица\|четверицы]] неразрывно связана с ландшафтом "темного леса" и его хижины.
+    - **Персонификация Земли**: Чтобы понять Хайдеггера, нужно "стать тектоническими существами".
