Published multiple files

--- a/src/site/notes/Кейс база знаний/3 Понятия/03 Понятия Оглавление.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/03 Понятия Оглавление.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/03_Понятия_Оглавления","permalink":"/kejs-baza-znanij/3-ponyatiya/03-ponyatiya-oglavleniya/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/3 Понятия/03_Понятия_Оглавление","permalink":"/kejs-baza-znanij/3-ponyatiya/03-ponyatiya-oglavlenie/"}
 ---
 
 
