Published multiple files

--- a/src/site/notes/Кейс база знаний/2 Темы/02 Темы Оглавление.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/02 Темы Оглавление.md
@@ -3,7 +3,7 @@
 ---
 
 
-# Темы
+# Темы курса "Введение в геофилософию" 
 
 - [[Антикоперниканский поворот\|Антикоперниканский поворот]]
 - [[Кейс база знаний/2 Темы/Геофеноменология\|Геофеноменология]]
