--- a/src/site/notes/Кейс база знаний/3 Понятия/03 Понятия Оглавление.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/03 Понятия Оглавление.md
@@ -3,7 +3,7 @@
 ---
 
 
-# Понятия
+# Понятия курса "Введение в геофилософию"
 
 - [[Кейс база знаний/3 Понятия/Автохтония\|Автохтония]]
 - [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцен]]
