--- a/src/site/notes/Кейс база знаний/4 Авторы/04 Авторы Оглавление.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/04 Авторы Оглавление.md
@@ -2,7 +2,7 @@
 {"dg-publish":true,"dg-path":"Кейс база знаний/4 Авторы/04_Авторы_MOC","permalink":"/kejs-baza-znanij/4-avtory/04-avtory-moc/"}
 ---
 
-# Авторы
+# Авторы филосовских концепций
 
 - [[Кейс база знаний/4 Авторы/Агамбен, Джорджо\|Агамбен, Джорджо]]
 - [[Кейс база знаний/4 Авторы/Барад, Карен\|Барад, Карен]]
