--- a/src/site/notes/Кейс база знаний/5 Источники/05 Источники Оглавление.md
+++ b/src/site/notes/Кейс база знаний/5 Источники/05 Источники Оглавление.md
@@ -3,7 +3,7 @@
 ---
 
 
-# Источники
+# Источники – курс "Введение в геофилософию"
 
 - [[Кейс база знаний/5 Источники/Книга - Атлас Петрамодерна\|Книга - Атлас Петрамодерна]]
 - [[Книга - Метафизика ландшафта (Подорога)\|Книга - Метафизика ландшафта (Подорога)]]
